# sigil

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  __init__.py  cli_handler.py  converter.py  font_processor.py  glyph2svg.py  glyph_extractor.py  main.py  models.py  pinyin_processor.py  pyproject.toml  setup.py  sigil.py  sigil_cli.py  svg_generator.py  utils.py
examples/: __init__.py  basic_usage.py
src/sigil/: __init__.py
src/sigil/chinese/: __init__.py  pinyin_processor.py
src/sigil/cli/: __init__.py  handler.py  main.py
src/sigil/core/: __init__.py  converter.py  font_processor.py  glyph_extractor.py  svg_generator.py
src/sigil/utils/: __init__.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_converter.py
tests/unit/: __init__.py  test_models.py  test_pinyin_processor.py  test_utility_functions.py
